--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div>
             <h4>Which option best describe your current role?</h4>
-            <select class="full" id="cars" name="cars">
+            <select class="selecter" id="cars" name="cars">
                 <option value="">Select current role</option>
                 <option value="">01</option>
                 <option value="">02</option>
@@ -44,7 +44,7 @@
 
         <div>
             <h4>What is your favorite feature of freeCodeCamp?</h4>
-            <select class="full" id="cars" name="cars">
+            <select class="selecter" id="cars" name="cars">
                 <option value="">Select an option</option>
                 <option value="">01</option>
                 <option value="">02</option>
@@ -66,6 +66,13 @@
             <h4><input type="checkbox" name="" >Forum</h4>
             <h4><input type="checkbox" name="" >Additional Courses</h4>
         </div>
+
+        <div>
+            <h4>Any comments or suggestions?</h4>
+            <textarea rows="4" cols="50" name="comment" form="usrform">Enter your comment here..</textarea>
+        </div>
+
+        <button>Submit</button>
 
     </section>
 </body>
