--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div>
             <h4>Any comments or suggestions?</h4>
-            <textarea rows="4" cols="50" name="comment" form="usrform">Enter your comment here..</textarea>
+            <textarea rows="4" cols="50" name="comment" form="usrform" placeholder="Enter your comment here.."></textarea>
         </div>
 
         <button>Submit</button>
